--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/wow
 spring.datasource.username=rithvik
